taskを追加できるように変更

--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -2,18 +2,20 @@
 #
 # Table name: tasks
 #
-#  id         :bigint           not null, primary key
-#  content    :text             not null
-#  limit      :integer
-#  staus      :integer          default(0)
-#  title      :string           not null
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
-#  user_id    :bigint           not null
+#  id           :bigint           not null, primary key
+#  limit        :integer
+#  status       :integer          default(0)
+#  task_content :text             not null
+#  task_title   :string           not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  board_id     :bigint           not null
+#  user_id      :bigint           not null
 #
 # Indexes
 #
-#  index_tasks_on_user_id  (user_id)
+#  index_tasks_on_board_id  (board_id)
+#  index_tasks_on_user_id   (user_id)
 #
 
 # This model initially had no columns defined. If you add columns to the
